# tanks-blitz-server

./: .dockerignore  .gitignore  Dockerfile  README.md  README_udp_test.md  check_udp_bind.py  docker-compose.yml  pyproject.toml  requirements.txt  run_servers.sh  run_tests.sh  send_tcp_test.py
auth_server/: Dockerfile  __init__.py  auth_grpc_server.py  main.py  metrics.py  tcp_handler.py  user_service.py
auth_server/grpc_generated/: __init__.py  auth_service_pb2.py  auth_service_pb2_grpc.py
auth_server_cpp/: CMakeLists.txt  auth_tcp_server.cpp  auth_tcp_server.h  auth_tcp_session.cpp  auth_tcp_session.h  main_auth.cpp
auth_server_cpp/grpc_generated/: auth_service.grpc.pb.cc  auth_service.grpc.pb.h  auth_service.pb.cc  auth_service.pb.h
core/: __init__.py  message_broker_clients.py  redis_client.py
cpp/: CMakeLists.txt  Dockerfile
cpp/auth_server_cpp/: CMakeLists.txt  auth_tcp_server.cpp  auth_tcp_server.h  auth_tcp_session.cpp  auth_tcp_session.h  main_auth.cpp
cpp/game_server_cpp/: CMakeLists.txt  command_consumer.cpp  command_consumer.h  game_session.cpp  game_session.h  kafka_producer_handler.cpp  kafka_producer_handler.h  main.cpp  session_manager.cpp  session_manager.h  tank.cpp  tank.h  tank_pool.cpp  tank_pool.h  tcp_handler.cpp  tcp_handler.h  tcp_session.cpp  tcp_session.h  udp_handler.cpp  udp_handler.h
cpp/protos/: CMakeLists.txt  auth_service.proto
cpp/tests/: CMakeLists.txt  README.md  main_test.cpp  test_auth_tcp_session.cpp  test_command_consumer.cpp  test_game_session.cpp  test_game_tcp_session.cpp  test_game_udp_handler.cpp  test_session_manager.cpp  test_tank.cpp  test_tank_pool.cpp
deployment/: entrypoint.sh
deployment/kubernetes/: auth_deployment.yaml  auth_service.yaml  game_deployment.yaml  game_service.yaml  nginx_configmap.yaml  nginx_deployment.yaml  nginx_service.yaml  redis_backup_cronjob.yaml  redis_configmap.yaml  redis_deployment.yaml  redis_pvc.yaml  redis_service.yaml
deployment/nginx/: nginx.conf
deployment/redis_backup/: backup_redis.sh
game_server/: __init__.py  auth_client.py  command_consumer.py  game_logic.py  main.py  metrics.py  models.py  session_manager.py  tank.py  tank_pool.py  tcp_handler.py  udp_handler.py
game_server_cpp/: CMakeLists.txt  command_consumer.cpp  command_consumer.h  game_session.cpp  game_session.h  kafka_producer_handler.cpp  kafka_producer_handler.h  main.cpp  session_manager.cpp  session_manager.h  stubs.cpp  stubs.h  tank.cpp  tank.h  tank_pool.cpp  tank_pool.h  tcp_handler.cpp  tcp_handler.h  tcp_session.cpp  tcp_session.h  udp_handler.cpp  udp_handler.h
monitoring/prometheus/: prometheus.yml
tests/: __init__.py  test_auth_server.py  test_game_server.py  test_integration.py
tests/load/: locustfile_auth.py  locustfile_game.py
tests/unit/: test_auth_client.py  test_auth_grpc_server.py  test_auth_main.py  test_auth_service.py  test_command_consumers.py  test_game_logic.py  test_message_broker_clients.py  test_redis_client.py  test_session_manager.py  test_tank.py  test_tank_pool.py  test_tcp_handler_auth.py  test_tcp_handler_game.py  test_udp_handler_game.py
